<resources>
    <string name="app_name">Sign Me</string>
    <string name="network_connection_error">Internet connection lost, please retry again</string>
    <string name="network_connection_back">Internet connection is back</string>
    <string name="network_default_error">Something wrong happened, please retry again</string>
    <string name="network_internal_error">Our systems got an error, please retry again</string>
    <string name="network_server_not_available">Our services are under maintenance, please retry after some time</string>
    <string name="network_server_timeout">Timeout error, please retry again</string>
    <string name="server_connection_error">Not able to connect, please retry again</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="hint_enter_a_city_name">Enter a City Name</string>
    <string name="label_search">Search</string>
    <string name="str_network_error">Whoops!! Network error, Please try again.</string>
    <string name="weather_type_icon">Weather Type Icon</string>
    <string name="background_image">Background Image</string>
    <string name="msg_please_enter_city_name">Please enter a City Name</string>
    <string name="hint_enter_city_name">Search City name</string>
    <string name="agree_terms_and_condition">I agree to Terms &amp; Conditions, <b><font color='#29499e'>Privacy Policy</font> and <font color='#29499e'>Eula Policy</font></b></string>
    <string name="sign_up_agree_terms_and_condition">I agree to the Terms &amp; Conditions and <b><font color='#29499e'>Privacy Policy</font></b></string>
    <string name="primary_channel">TheAppineers Channel</string>
    <string name="secondary_channel">Secondary Channel</string>
    <string name="msg_logged_in_from_other_device">You are logged out now because you have logged in from some other device.</string>
    <string name="app_logo">app logo here</string>
    <string name="bad_weather_bg">Bad weather image for bg</string>
    <string name="weather_icon">Weather icon</string>
    <string name="boarding_image">Boarding Image</string>
    <string name="facebook_icon">Login through Facebook</string>
    <string name="google_icon">Login through GMail</string>
    <string name="apple_icon">Login through Apple</string>
    <string name="add_profile_icon">Add profile pic icon</string>
    <string name="gallery_image">Gallery image here</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_n_conditions">Terms &amp; Conditions</string>
    <string name="hint_username">Username</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="hint_mobile_number_optional">Mobile Number(Optional)</string>
    <string name="hint_old_mobile_number">Old Mobile Number</string>
    <string name="hint_new_mobile_number">New Mobile Number</string>
    <string name="hint_confirm_mobile_number">Confirm Mobile Number</string>
    <string name="hint_password">Enter Password</string>
    <string name="hint_email">Enter Email Address</string>
    <string name="hint_email_optional">Email(Optional)</string>
    <string name="hint_forgot_email">theapp@gmail.com</string>
    <string name="hint_address">Address</string>
    <string name="hint_is_typing">is typing.....</string>
    <string name="hint_city">City</string>
    <string name="hint_state">State</string>
    <string name="hint_zip_code">Zip Code</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="hint_FirstName">Enter First Name</string>
    <string name="hint_LastName">Enter Last Name</string>
    <string name="hint_old_password">Enter Old Password</string>
    <string name="hint_new_password">Enter New Password</string>
    <string name="hint_confirm_password">Enter Confirm Password</string>
    <string name="hint_brief_explain_message">Type here...</string>
    <string name="message_address_update">Address Updated Successfully!</string>
    <string name="label_login_button">Sign In</string>
    <string name="label_subscribe_now_button">Subscribe Now</string>
    <string name="label_save_button">Save</string>
    <string name="label_clear_button">Clear</string>
    <string name="label_next_button">Next</string>
    <string name="label_create_account_button">Create an account </string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_previous_button">Back</string>
    <string name="label_skip_button">Skip</string>
    <string name="label_send_reset_link_button">Send</string>
    <string name="label_location_allow_button">Allow</string>
    <string name="label_edit_profile_button">Edit Profile</string>
    <string name="label_resend_otp_button">Resend OTP</string>
    <string name="label_submit_otp_button">Submit</string>
    <string name="label_reset_password_button">Reset Password</string>
    <string name="label_cancel_button">Cancel</string>
    <string name="label_done_button">Done</string>
    <string name="label_update_button">Update</string>
    <string name="label_settings_text">Settings</string>
    <string name="label_change_password">Change Password</string>
    <string name="label_change">Save New Password</string>
    <string name="label_yes_button">Yes</string>
    <string name="label_no_button">No</string>
    <string name="label_send_button">Send Feedback</string>
    <string name="label_agree_button">Agree</string>
    <string name="label_not_now_button">Not Now</string>
    <string name="label_later_button">Later</string>
    <string name="label_rate_now_button">Rate Now</string>
    <string name="label_start_button">Get Started</string>
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_email_address">Email Address</string>
    <string name="label_password">Password</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_gender">Gender</string>
    <string name="label_bithday">Birthday</string>
    <string name="label_city">City</string>
    <string name="label_maximum_distance">Maximum Distance</string>
    <string name="label_km">miles.</string>
    <string name="label_age_range">Age Range</string>
    <string name="label_km_count">10miles.</string>
    <string name="label_range_slider_start">18</string>
    <string name="label_range_slider_end">45</string>
    <string name="label_back_button">Back</string>
    <string name="label_welcome">Welcome</string>
    <string name="label_sign_in_continue">Sign In To Continue</string>
    <string name="alert_enter_brief">Please enter add description</string>
    <string name="label_confirm_button">Confirm</string>
    <string name="label_date_of_birth">Enter Date Of Birth</string>
    <string name="label_enable_location">Enable Location</string>
    <string name="label_need_location_info">You\'ll need to enable your location in order to use sign me</string>
    <string name="label_its_matches">It’s a Match!</string>
    <string name="label_unmatch">Unmatch</string>
    <string name="label_super_like_text">Super Like</string>
    <string name="label_likes_text">Likes</string>
    <string name="label_matches_text">Matches</string>
    <string name="label_view_all_text">View All</string>
    <string name="label_likes_desc_text">Upgrade your profile to view those who have liked you!</string>
    <string name="label_like_each_other">have liked each other.</string>
    <string name="label_unmatch_desc">Are you sure you want to unmatch? You won’t be able to message them.</string>
    <string name="label_see_like_btn">See Who Likes You</string>
    <string name="label_resend_text"><b><font color='#29499e'>Resend OTP</font></b></string>
    <string name="label_forgot_password_text">Forgot Password?</string>
    <string name="label_forgot_password_toolbar_text">Forgot Password</string>
    <string name="label_verification_otp_toolbar_text">Verification Code</string>
    <string name="label_verification_toolbar_text">Verification</string>
    <string name="label_mobile_number_toolbar_text">Mobile Number</string>
    <string name="label_reset_password_toolbar_text">Reset Password</string>
    <string name="label_image_cropper_toolbar_text">Crop</string>
    <string name="label_sign_up_toolbar_text">Create An Account</string>
    <string name="label_add_address">Address</string>
    <string name="label_add_address_info">Additional Information</string>
    <string name="label_static_page_toolbar_text">Title</string>
    <string name="label_edit_profile_toolbar_text">Edit Profile</string>
    <string name="label_complete_profile_toolbar_text">Complete Your Profile</string>
    <string name="label_edit_block_users_text">Blocked Users</string>
    <string name="label_send_feedback_toolbar_text">Send Feedback</string>
    <string name="label_change_password_toolbar_text">Change Password</string>
    <string name="label_change_phone_number_toolbar_text">Change Phone Number</string>
    <string name="label_friends_fragment_toolbar_text">Friends</string>
    <string name="label_home_fragment_toolbar_text">Home</string>
    <string name="label_home_fragment_explore_text">Explore</string>
    <string name="label_settings_fragment_toolbar_text">Settings</string>
    <string name="label_home_fragment_message_text">Chat</string>
    <string name="label_profile_fragment_message_text">My Profile</string>
    <string name="label_trips">Trips</string>
    <string name="label_activity_text">Activity</string>
    <string name="label_save_profile">Save Profile</string>
    <string name="label_get_started_profile">Get Started</string>
    <string name="label_create_new_account_text">Create a new account?</string>
    <string name="label_phone_sign_up_text"><font color='#29499e'><u>Sign up with mobile number.</u></font></string>
    <string name="label_email_social_sign_up_text"><font color='#29499e'><u>Sign up with email or social.</u></font></string>
    <string name="label_create_now_text">Sign Up</string>
    <string name="label_forgot_password_otp_message_text">Enter your registered mobile number to send OTP.</string>
    <string name="label_forgot_password_email_message_text">Please enter the email address associated with your account. We will email you a link to reset your password.</string>
    <string name="label_enter_verification_code_message_text">Please type the verification code sent to</string>
    <string name="label_verification_code_message_text">We did send OTP code to your phone number,Please check it and enter below.</string>
    <string name="label_change_phone_number_message_text">Enter your old and new mobile number to change your mobile number.</string>
    <string name="label_did_not_receive_otp_text">Didn\'t get OTP?</string>
    <string name="label_profile_match_description">You both match due to intellectual, emotional and the ability to create new ideas compatibility. This combination is very compatible as long as their is a form of freedom.</string>
    <string name="label_attach_image">Attach Image</string>
    <string name="label_about_you">About You</string>
    <string name="label_looking_for">Looking For</string>
    <string name="label_profile_picture">Profile Picture</string>
    <string name="label_send_my_feedback_text">Leave your feedback, suggestions, and issues for SignME! below. We’d love to hear from you!</string>
    <string name="label_rate_app_text">Rate Us</string>
    <string name="label_rate_message_text">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than minute. Thank you for your support!</string>
    <string name="label_yes_unmatch">Yes, Unmatch</string>
    <string name="label_nevermind">Nevermind</string>
    <string name="report_user">Report User</string>
    <string name="block_user">Block User</string>
    <string name="password_policy">Password should contain min 8 character with 1 Alphabet and 1 Special character.</string>
</resources>