<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.app.signme.viewModel.ForgotPasswordEmailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screenbackground"
        tools:context=".view.authentication.forgotpassword.email.ForgotPasswordWithEmailActivity">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/label_forgot_password_toolbar_text"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_dimen_16sp"
           style="@style/MediumTextStyle"
            app:startIconDrawable="@drawable/ic_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ibtnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/back"
            app:layout_constraintBottom_toBottomOf="@+id/tvForgotPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvForgotPassword" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageView2"
                    android:layout_width="@dimen/dimen_180dp"
                    android:layout_height="@dimen/dimen_130dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/app_logo"
                    android:layout_marginTop="@dimen/dimen_50dp"
                    android:src="@mipmap/signme_logo" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvForgotPasswordMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/dimen_24dp"
                    android:gravity="center"
                    android:text="@string/label_forgot_password_email_message_text"
                    android:textColor="@color/app_gray"
                    android:textSize="@dimen/text_dimen_14sp"
                    style="@style/LightTextStyle"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEMail"
                    style="@style/OutlinedBoxInputLayoutStyle"
                    android:layout_marginTop="@dimen/_30sdp"
                    app:startIconDrawable="@drawable/ic_email"
                    android:hint="@string/hint_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietEMail"
                        style="@style/InputOtherStyle"
                        android:imeOptions="actionDone"
                        android:layout_marginBottom="@dimen/dimen_16dp"
                        android:inputType="textEmailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mbtnSendResetLink"
                    style="@style/ButtonStyle"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/label_send_reset_link_button"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>