<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/screenbackground"
        android:paddingBottom="@dimen/dimen_8dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:cardBackgroundColor="@color/colorGreyLight"
            app:cardCornerRadius="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btnReportUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    style="@style/RegularTextStyle"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/report_user"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_dimen_18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/black_trans" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btnBlockUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    style="@style/RegularTextStyle"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/block_user"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_dimen_18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/black_trans" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:textColor="@color/app_color"
            android:backgroundTint="@color/white"
            android:text="@string/label_cancel_button" />

    </LinearLayout>
</layout>